--- a/src/assets/sass/components/statcard.scss
+++ b/src/assets/sass/components/statcard.scss
@@ -5,7 +5,6 @@
   align-items: center;
   align-items: center;
   border-right: 1px solid #f1f1f1;
-  border-radius: 10px;
   padding: 0 24px;
   &:last-of-type {
     border-right: none;
